# python-schedules-tools

./: .gitignore  .project  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  requirements-extra.txt  requirements-tests.txt  requirements.txt  run_tests  setup.cfg  setup.py  tox.ini
.github/workflows/: pypi.yml  test.yml
schedules_tools/: __init__.py  converter.py  diff.py  diff_v2.py  discovery.py  jsondate.py  models.py  processor.py  schedule_converter.py  schedule_diff.py  testrunner.py  utils.py
schedules_tools/batches/: schedule_batch.py  utils.py
schedules_tools/batches/templates/: example.yml
schedules_tools/handlers/: __init__.py  html.py  jsonflat.py  jsonstruct.py  msp.py  rally.py  tji.py  tjp.py  tjx.py  tjx2.py
schedules_tools/handlers_extra/: rally.py
schedules_tools/schedule_handlers/: __init__.py  confluencehtml.py  html.py  ics.py  jsonflat.py  jsonstruct.py  msp.py  rally.py  smart_sheet.py  tji.py  tjp.py  tjx.py  tjx2.py
schedules_tools/storage/: __init__.py  cvs.py  local.py
schedules_tools/storage_handlers/: __init__.py  cvs.py  local.py
schedules_tools/tests/: __init__.py  intermediary-struct-reference-duplicated-names.json  intermediary-struct-reference.json  jsondate.py  ref-json.json  ref-msp.json  ref-tjx.json  ref-tjx2.json  ref.json  test_check_tasks.py  test_convert.py  test_diff.py  test_error_container.py  test_handler_specifics.py  test_handlers.py  test_models.py  test_unit_cvs.py
schedules_tools/tests/conflicthandlers/: tjx.py
schedules_tools/tests/data/: input-v2.tjx  output-flat.json  output-struct.json  output.html  output.tjx  output.xml  proj-10-1-2-smartsheet.xml  proj-10-1-2.tjx
schedules_tools/tests/fixtures/: cvs_log.json  cvs_log.stdout  diff_output.json  diff_output.txt
schedules_tools/tests/foohandlers/: abc.py
schedules_tools/tests/schedule_files/: export-schedule-html-css.html  (+18 more)
scripts/: get_local_handle  handler_testrunner  rally2confluence  rpm_log.py  schedule-convert  schedule-diff  schedule_converter  schedule_converter.py  schedule_diff  setup_utils.py  storage_update  test_smartsheet.py  testrunner_handler
spec/: add_version.py  changelog.txt  pp-schedules-tools.spec.in  python-schedules-tools.spec.in  schedules-tools.spec.in
tests/: __init__.py  test_convert.py  test_convert.sh  test_diff.py  test_handlers.py  test_models.py
(+36 files in other folders)
