[metadata]
name = schedules-tools
author = RH PLM
author_email = pp-dev-list@redhat.com
description = Schedules tools to handle/convert various schedule formats
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RedHat-Eng-PGM/python-schedules-tools
project_urls =
    Bug Tracker = https://github.com/RedHat-Eng-PGM/python-schedules-tools/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
license = MIT


[options]
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    icalendar
    lxml
    python-dateutil
    pytz


[options.extras_require]
rally = pyral>1.5
smartsheet = smartsheet-python-sdk-py39


[options.entry_points]
console_scripts =
    schedule-convert = schedules_tools.bin.schedule_convert:main
    schedule-diff = schedules_tools.bin.schedule_diff:main
