[metadata]
name = schedules-tools
author = RH PLM
author_email = pp-dev-list@redhat.com
description = Schedules tools to handle/convert various schedule formats
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RedHat-Eng-PGM/python-schedules-tools
project_urls =
    Bug Tracker = https://github.com/RedHat-Eng-PGM/python-schedules-tools/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
license = MIT


[options]
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    icalendar
    lxml
    pyral >= 1.5
    python-dateutil
    pytz
    pyyaml
    smartsheet-python-sdk-py39

scripts =
    scripts/rally2confluence


[options.entry_points]
console_scripts =
    schedule-batch = schedules_tools.batches.schedule_batch:main
    schedule-convert = schedules_tools.converter:main
    schedule-diff = schedules_tools.diff:main
